Add container for Reishi mushroom

--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+      <div class="container">
+        <h1>Mushroom Gallery</h1>
+        <div class="mushroom">
+          <h2>Reishi (Ganoderma Lucidum)</h2>
+          <img src="assets/images/Ganoderma Lucidum .jpeg" alt="Reishi Mushroom">
+          <p>Contains beta-glucans and triterpenoids, compounds that can lower blood sugar and blood pressure levels, reducing your diabetes and heart disease risk.</p>
+        </div>
+      </div>
+
+      </div>
   </body>
 </html>
