Add container for Oregon Reishi mushroom

--- a/index.html
+++ b/index.html
@@ -19,15 +19,46 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-      <div class="container">
-        <h1>Mushroom Gallery</h1>
-        <div class="mushroom">
-          <h2>Reishi (Ganoderma Lucidum)</h2>
-          <img src="assets/images/Ganoderma Lucidum .jpeg" alt="Reishi Mushroom">
-          <p>Contains beta-glucans and triterpenoids, compounds that can lower blood sugar and blood pressure levels, reducing your diabetes and heart disease risk.</p>
-        </div>
+    <div class="container">
+      <h1>Mushroom Gallery</h1>
+      <div class="mushroom">
+        <h2>Reishi (Ganoderma Lucidum)</h2>
+        <img
+          src="assets/images/Ganoderma Lucidum .jpeg"
+          alt="Reishi Mushroom"
+        />
+        <p>
+          Contains beta-glucans and triterpenoids, compounds that can lower
+          blood sugar and blood pressure levels, reducing your diabetes and
+          heart disease risk.
+        </p>
       </div>
-
+      <div class="mushroom">
+        <h2>Reishi (Ganoderma Lucidum)</h2>
+        <img
+          src="assets/images/Ganoderma Lucidum .jpeg"
+          alt="Reishi Mushroom"
+        />
+        <p>
+          Contains beta-glucans and triterpenoids, compounds that can lower
+          blood sugar and blood pressure levels, reducing your diabetes and
+          heart disease risk.
+        </p>
       </div>
+      <div class="mushroom">
+        <h2>Oregon Reishi (Ganoderma Oregonense)</h2>
+        <img
+          src="assets/images/Ganoderma Oregonense.jpeg"
+          alt="Oregon Reishi"
+        />
+        <p>
+          Nourishing to the liver and kidneys, supportive of a healthy immune
+          response, healthy circulation, healthy cholesterol, and overall
+          vitality and well being. It is often used to help the body adapt to
+          stress and to nourish the nervous system which promotes healthy sleep
+          and cognitive function.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
