Add container for Lion's Mane Mushroom

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
           and cognitive function.
         </p>
       </div>
+      <div class="mushroom">
+        <h2>Lion's Mane (Hericium Erinaceus)</h2>
+        <img
+          src="assets/images/Hericium Erinaceus.jpeg"
+          alt="Lion's Mane Mushroom"
+        />
+        <p>
+          Studies have found that lion's mane mushrooms contain two special
+          compounds that can stimulate the growth of brain cells: hericenones
+          and erinacines.
+        </p>
+      </div>
     </div>
   </body>
 </html>
