Add Shiitake mushroom container

--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
           and erinacines.
         </p>
       </div>
+      <div class="mushroom">
+        <h2>Shiitake (Lentinula Edodes)</h2>
+        <img
+          src="assets/images/Lentinula Edodes.jpeg"
+          alt="Shiitake Mushroom"
+        />
+        <p>
+          Shiitake mushrooms contain essential macro and micronutrients as well
+          as many bioactive compounds, including polysaccharides, antioxidants,
+          dietary fiber, and ergosterol.
+        </p>
+      </div>
+      <div class="mushroom">
+        <h2></h2>
+      </div>
     </div>
   </body>
 </html>
