Add container for Turkey Tail mushroom

--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
         </p>
       </div>
       <div class="mushroom">
-        <h2></h2>
+        <h2>Turkey Tail (Trametes Versicilor)</h2>
+        <img
+          src="assets/images/Trametes Versicolor.jpeg"
+          alt="Turkey Tail Mushroom"
+        />
+        <p>
+          Turkey tail contains an impressive array of antioxidants, including
+          phenols and flavonoids.
+        </p>
       </div>
     </div>
   </body>
